Repaired broken run after import v4.2.x from GJ mainstream. Added new LinkProperties result in isMobileDataActive() in OsdUtil.java